--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "framer-motion": "^12.19.2",
     "next": "15.3.4",
     "react": "^19.0.0",
