--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "axios": "^1.10.0",
+    "cookies-next": "^6.0.0",
     "framer-motion": "^12.19.2",
     "headlessui": "^0.0.0",
     "next": "15.3.4",
