--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.10.0",
     "framer-motion": "^12.19.2",
     "headlessui": "^0.0.0",
+    "jose": "^6.0.11",
+    "js-cookie": "^3.0.5",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
