--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sweetalert2": "^11.22.2"
